# apple-sdk-gen

./: .gitignore  README.md
.github/workflows/: release.yml
tools/: pyproject.toml
tools/apple_sdk_gen/: LIMITATIONS.md  cli.py  config.py  main.py
tools/apple_sdk_gen/assembler/: sdk_layout.py
tools/apple_sdk_gen/crawler/: cache.py  client.py  framework.py  symbol.py  technologies.py
tools/apple_sdk_gen/generators/: modulemap.py  objc_header.py  sdk_metadata.py  swiftinterface.py  tbd.py
tools/apple_sdk_gen/models/: availability.py  symbol.py  types.py
tools/apple_sdk_gen/supplements/: commoncrypto.py  enum_values.py  inline_functions.py  libc.py  libcxx.py  platform_headers.py  reference_framework_headers.py  reference_headers.py  reference_libs.py  reference_toolchain.py  rewrite_swiftinterface.py  swift_frameworks.py  swift_shims.py  swift_stdlib.py  system_libs.py  system_modulemaps.py
tools/apple_sdk_gen/utils/: token_renderer.py  usr_parser.py  version.py
