[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-sdk-gen"
version = "0.1.0"
description = "Generate Apple SDK stubs from public documentation API"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
apple-sdk-gen = "apple_sdk_gen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
